# decision_space_harness

./: .gitignore  README.md  pyproject.toml  requirements.txt  scientific_methodology_reference.md  specification.md  technical_specification_plan.md  technical_specification_plan_v1.md
data/task_sets/: conflict_task_smoke_v1.yaml  conflict_tasks_v1.yaml  real_conflict_tasks_v1.yaml
data/tasks/real/: conflict_real_01.yaml  conflict_real_02.yaml  conflict_real_03.yaml  conflict_real_04.yaml  conflict_real_05.yaml  conflict_real_06.yaml  conflict_real_07.yaml  conflict_real_08.yaml
data/tasks/synthetic/: conflict_policy_01.yaml  conflict_policy_02.yaml  conflict_policy_03.yaml  conflict_policy_04.yaml  conflict_policy_05.yaml  conflict_policy_06.yaml  conflict_policy_07.yaml  conflict_policy_08.yaml  conflict_policy_09.yaml  conflict_policy_10.yaml  conflict_policy_11.yaml  conflict_policy_12.yaml
experiments/configs/: conflict_multi_agent_v1.yaml  conflict_perturbation_v1.yaml  conflict_phase3_analysis_v1.yaml  conflict_real_docs_v1.yaml  conflict_smoothing_v1.yaml  conflict_synthetic_suite_v1.yaml
src/decision_space_harness/: __init__.py
src/decision_space_harness/agents/: baseline_direct.py  option_generation.py  retrieve_then_synthesize.py  structured_conflict_preserving.py
src/decision_space_harness/artifacts/: parse.py
tests/integration/: test_phase1a_runner.py  test_phase1b_task_suites.py  test_phase2_workflows.py  test_phase3_analysis.py
tests/unit/: test_normalizer.py  test_phase3_metrics.py  test_task_sets.py
(+26 files in other folders)
